--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>Welcome to {{ title }}</h1>
+<app-nav-bar></app-nav-bar>
 
-<router-outlet></router-outlet>
+<main class="container pt-3 main-container">
+  <h1>Welcome to {{ title }}</h1>
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let p of products">{{ p.name }}</li>
+  </ul>
+  <router-outlet></router-outlet>
+</main>
