--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,6 @@
 
 /* Importing Font-awesome SCSS file. */
 @import "node_modules/font-awesome/scss/font-awesome.scss";
+
+/* Importing SCSS variables. */
+@import "./scss/variables";
